--- a/.travis.yml
+++ b/.travis.yml
@@ -23,25 +23,20 @@ env:
 install: |
   # Prepare the COQ container
   COQ_IMAGE="${COQ_IMAGE-coqorg/coq:$COQ}"
-  docker pull ${COQ_IMAGE}
+  docker pull "${COQ_IMAGE}"
   docker run -d -i --init --name=COQ -v ${TRAVIS_BUILD_DIR}:/home/coq/${CONTRIB_NAME} -w /home/coq/${CONTRIB_NAME} ${COQ_IMAGE}
   docker exec COQ /bin/bash --login -c "
-    export PS4='+ \e[33;1m(\$0 @ line \$LINENO) \$\e[0m '; set -ex
-    if [ -n \"\${COMPILER_EDGE}\" ]; then opam switch \${COMPILER_EDGE}; eval \$(opam env); fi
     opam update -y
-    # TODO: specify dependencies below
-    # opam install -y -v -j ${NJOBS} coq-mathcomp-ssreflect
     opam config list; opam repo list; opam list
-    " install
+    "
 
 script:
 - echo -e "${ANSI_YELLOW}Building ${CONTRIB_NAME}...${ANSI_RESET}" && echo -en 'travis_fold:start:script\\r'
 - |
   docker exec COQ /bin/bash --login -c "
-    export PS4='+ \e[33;1m(\$0 @ line \$LINENO) \$\e[0m '; set -ex
     sudo chown -R coq:coq /home/coq/${CONTRIB_NAME}
     make -j ${NJOBS} all
-    " script
+    "
 - echo -en 'travis_fold:end:script\\r'
 
 after_script:
