--- a/.travis.yml
+++ b/.travis.yml
@@ -22,26 +22,10 @@ env:
   - COQ=8.5
 
 install:
-- echo -e "${ANSI_YELLOW}Initialize OPAM and install dependencies...${ANSI_RESET}" && echo -en 'travis_fold:start:install\\r'
-- docker pull ${COQ_IMAGE-coqorg/coq:$COQ}
-- docker run -d -i --init --name=COQ -v ${TRAVIS_BUILD_DIR}:/home/coq/${PACKAGE} -w /home/coq/${PACKAGE} ${COQ_IMAGE-coqorg/coq:$COQ}
-- |
-  docker exec COQ /bin/bash --login -c "
-    set -ex
-    opam update -y
-    opam pin add ${PACKAGE} . -vynk path
-    opam install ${PACKAGE} -vyj ${NJOBS} --deps-only
-    opam config list
-    opam repo list
-    opam list
-    "
-- echo -en 'travis_fold:end:install\\r'
+- ./travis.sh install
 
 script:
-- echo -e "${ANSI_YELLOW}Building ${PACKAGE}...${ANSI_RESET}" && echo -en 'travis_fold:start:script\\r'
-- docker exec COQ opam install ${PACKAGE} -vyj ${NJOBS}
-- docker exec COQ opam uninstall ${PACKAGE} -vy
-- echo -en 'travis_fold:end:script\\r'
+- ./travis.sh script
 
 after_script:
-- docker stop COQ
+- ./travis.sh after_script
