--- a/coq-dblib.opam
+++ b/coq-dblib.opam
@@ -45,6 +45,7 @@ tags: [
 ]
 
 build: [make "-j%{jobs}%"]
+run-test: [make "tests"]
 install: [make "install"]
 remove: [make "uninstall"]
 depends: ["coq" {>= "8.7" & < "8.13~" | = "dev"}]
