--- a/.github/workflows/coq-build.yml
+++ b/.github/workflows/coq-build.yml
@@ -1,9 +1,9 @@
-name: Build
+name: CI
 
 on: [push, pull_request]
 
 jobs:
-  build:
+  run:
     runs-on: ubuntu-latest
     strategy:
       matrix:
@@ -12,7 +12,6 @@ jobs:
         exclude:
           - coq: '8.7'
             ocaml: '4.09-flambda'
-      max-parallel: 20
       fail-fast: false
 
     steps:
@@ -22,20 +21,22 @@ jobs:
           opam_file: 'coq-dblib.opam'
           coq_version: ${{ matrix.coq }}
           ocaml_version: ${{ matrix.ocaml }}
-
-  test:
-    runs-on: ubuntu-latest
-    needs: build
-    strategy:
-      matrix:
-        coq: ['dev', '8.12', '8.11', '8.10', '8.9', '8.8', '8.7']
-        ocaml: ['4.09-flambda', '4.07-flambda', 'minimal']
-        exclude:
-          - coq: '8.7'
-            ocaml: '4.09-flambda'
-      max-parallel: 20
-      fail-fast: false
-
-    steps:
-      - run: opam install coq-dblib
-      - run: cd tests && make
+          custom_script: |
+            startGroup Print opam config
+              opam config list; opam repo list; opam list
+            endGroup
+            startGroup Build dependencies
+              opam pin add -n -y -k path $PACKAGE $WORKDIR
+              opam update -y
+              opam install -y -j 2 $PACKAGE --deps-only
+            endGroup
+            startGroup List installed packages
+              opam list
+            endGroup
+            startGroup Build
+              opam install -y -v -j 2 --with-test $PACKAGE
+              opam list
+            endGroup
+            startGroup Uninstallation test
+              opam remove $PACKAGE
+            endGroup
