--- a/.github/workflows/coq-build.yml
+++ b/.github/workflows/coq-build.yml
@@ -15,7 +15,7 @@ jobs:
       fail-fast: false
 
     steps:
-      - run: swapoff -av
+      - run: sudo swapoff -av
       - uses: actions/checkout@v2
       - uses: coq-community/docker-coq-action@v1
         with:
