--- a/meta.yml
+++ b/meta.yml
@@ -29,13 +29,14 @@ license:
 
 supported_coq_versions:
   text: 8.7 or later
-  opam: '{(>= "8.7" & < "8.13~") | (= "dev")}'
+  opam: '{(>= "8.7" & < "8.15~") | (= "dev")}'
 
 tested_coq_nix_versions:
-- version_or_url: https://github.com/coq/coq-on-cachix/tarball/master
+- coq_version: 'master'
 
 tested_coq_opam_versions:
 - version: dev
+- version: '8.13'
 - version: '8.12'
 - version: '8.11'
 - version: '8.10'
